--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -54,7 +54,7 @@
   right: 125px;
 }
 .slider-dots {
-  position: absolute;
+  position: absolute !important;
   right: 50px;
   bottom: 36px;
   max-width: 920px;
