--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -91,3 +91,34 @@ a {
     }
   }
 }
+.btn {
+  font-weight: 800;
+  font-size: 40px;
+  line-height: 36px;
+  span {
+    padding: 17px 57px 15px 17px;
+    background: $green;
+    margin-left: 19px;
+    display: inline-block;
+    position: relative;
+    &::before {
+      content: "";
+      position: absolute;
+      width: 20px;
+      height: 1px;
+      background-color: $white;
+      top: 50%;
+      left: -10px;
+    }
+    &::after {
+      content: "";
+      position: absolute;
+      width: 25px;
+      height: 21px;
+      background-image: url("../img/arrows-right.svg");
+      top: 50%;
+      right: 17px;
+      transform: translateY(-50%);
+    }
+  }
+}
