--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -255,9 +255,10 @@
   position: relative;
 }
 .slider-dots__circle {
-  width: 24px;
-  height: 24px;
+  width: 23px;
+  height: 23px;
   border-radius: 50%;
+  cursor: pointer;
   background-color: $green;
 }
 .slider-dots__content {
@@ -267,10 +268,30 @@
   position: absolute;
   bottom: 35px;
   transform: translateX(-50%);
+  &::before {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-bottom: 20px solid $green;
+    border-left: 12px solid transparent;
+    border-right: 12px solid transparent;
+    bottom: -21px;
+    left: 50%;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+  }
 }
 .slider-dots--1 {
   top: 335px;
   left: 0;
+  // z-index: 2;
+  .slider-dots__content {
+    transform: translateX(0);
+    &::before {
+      left: 0;
+    }
+  }
 }
 .slider-dots--2 {
   top: 270px;
@@ -313,6 +334,13 @@
 .slider-dots--8 {
   top: 470px;
   left: 35px;
+  .slider-dots__content {
+    transform: translateX(-261px);
+    &::before {
+      left: auto;
+      right: 0;
+    }
+  }
 }
 .surf-slider {
   padding-top: 110px;
