--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -51,6 +51,24 @@ a {
     top: 50%;
   }
 }
+.headline-right {
+  font-size: 22px;
+  line-height: 32px;
+  letter-spacing: 7.33333px;
+  opacity: 0.5;
+  padding-right: 103px;
+  position: relative;
+  display: inline-block;
+  &::before {
+    content: "";
+    position: absolute;
+    width: 80px;
+    height: 1px;
+    background-color: $white;
+    right: 0;
+    top: 50%;
+  }
+}
 .title {
   span {
     font-weight: 800;
@@ -91,6 +109,17 @@ a {
     }
   }
 }
+.desc {
+  display: inline-block;
+  &__head {
+    font-weight: 800;
+    font-size: 40px;
+    padding-left: 5px;
+    span {
+      font-weight: 100;
+    }
+  }
+}
 .btn {
   font-weight: 800;
   font-size: 40px;
@@ -121,4 +150,11 @@ a {
       transform: translateY(-50%);
     }
   }
+}
+.surf,
+.travel {
+  padding: 160px 0 120px;
+}
+.travel {
+  padding-bottom: 265px;
 }
