--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -175,7 +175,6 @@
 }
 
 .surf {
-  padding: 160px 0 120px;
   background-image: url("../img/surf-bg.png");
   background-repeat: no-repeat;
   background-position: right 200px;
@@ -410,6 +409,87 @@
   bottom: 0;
   left: 0;
   right: 0;
+}
+
+.travel {
+  background-image: url(../img/travel-bg.png);
+  background-repeat: no-repeat;
+  background-position: bottom right;
+  .slider-arrows {
+    top: 225px;
+    opacity: 0.5;
+  }
+}
+.travel-slider {
+  &__head {
+    background-repeat: no-repeat;
+    min-height: 780px;
+    background-position: top left;
+  }
+  &__subtitle {
+    text-align: right;
+    padding: 132px 80px 0 0;
+  }
+  &__desc {
+    padding: 160px 0 0 132px;
+    margin-top: -230px;
+    min-height: 320px;
+    background-repeat: no-repeat;
+    background-position: right center;
+    .desc__head {
+      position: relative;
+      padding-right: 67px;
+      img {
+        position: absolute;
+        right: 0;
+        top: 0;
+      }
+    }
+  }
+  &__btn {
+    text-align: center;
+  }
+}
+.travel-slider__info {
+  display: flex;
+  justify-content: space-around;
+  &-item {
+    min-height: 200px;
+    margin-bottom: 66px;
+    position: relative;
+  }
+}
+.travel-slider__info-subtitle {
+  position: absolute;
+  font-size: 18px;
+  line-height: 22px;
+  letter-spacing: 8px;
+  color: rgba($white, 0.5);
+  transform: rotate(-90deg);
+  white-space: nowrap;
+  text-align: right;
+  top: 97px;
+  left: -97px;
+  width: 200px;
+  height: 0;
+}
+.travel-slider__info-title {
+  font-weight: 800;
+  font-size: 40px;
+  line-height: 36px;
+  padding-left: 40px;
+  position: relative;
+  span {
+    position: absolute;
+    bottom: -8px;
+    right: 0;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 0;
+    text-align: right;
+    letter-spacing: 5.25px;
+    opacity: 0.75;
+  }
 }
 
 @import "media";
